--- a/skooog/lib/skooog_web/templates/layout/app.html.eex
+++ b/skooog/lib/skooog_web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Skooog!</title>
+    <title>Skooog</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
@@ -21,7 +21,9 @@
           </ul>
         </nav>
         -->
-        <span class="logo"></span>
+        <a href="/">
+          <span class="logo"></span>
+        </a>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
