Add buyers and objects

--- a/skooog/lib/skooog_web/templates/page/index.html.eex
+++ b/skooog/lib/skooog_web/templates/page/index.html.eex
@@ -9,7 +9,13 @@
     <h4>Interfaces</h4>
     <ul>
       <li>
+        <%= button("Objects", to: object_path(@conn, :index), method: "get", class: "btn btn-sm btn-default") %>
+      </li>
+      <li>
         <%= button("Actors", to: actor_path(@conn, :index), method: "get", class: "btn btn-sm btn-default") %>
+      </li>
+      <li>
+        <%= button("Buyers", to: buyer_path(@conn, :index), method: "get", class: "btn btn-sm btn-default") %>
       </li>
     </ul>
   </div>
