--- a/skooog/lib/skooog_web/templates/object/edit.html.eex
+++ b/skooog/lib/skooog_web/templates/object/edit.html.eex
@@ -1,5 +1,5 @@
-<h2>Edit Object</h2>
+<h2><%= gettext "Edit Object" %></h2>
 
 <%= render "form.html", Map.put(assigns, :action, object_path(@conn, :update, @object)) %>
 
-<span><%= link "Back", to: object_path(@conn, :index) %></span>
+<span><%= link gettext("Back"), to: object_path(@conn, :index), class: "btn btn-default" %></span>
